Add resoures to resource number